# http

./: .clang-format  .gitignore  CMakeLists.txt  HTTPParser.cpp  HTTPParser.hpp  HTTPReader.cpp  HTTPReader.hpp  HTTPRequest.cpp  HTTPRequest.hpp  README.md  Socket.hpp  Utils.cpp  Utils.hpp  WebServer  main.cpp  makefile  server.cpp  server.hpp
.github/workflows/: ci.yml
src/: CMakeLists.txt  ClientHandler.cpp  ClientHandler.hpp  DefaulValues.hpp  Exceptions.hpp  HTTPParser.cpp  HTTPParser.hpp  HTTPReader.cpp  HTTPReader.hpp  MagicEnum.hpp  Socket.cpp  Socket.hpp  Utils.cpp  Utils.hpp  WebTypes.hpp
src/Exceptions/: CMakeLists.txt  Exceptions.cpp  Exceptions.hpp
src/HTTP/: CMakeLists.txt  HTTPParser.cpp  HTTPParser.hpp  HTTPReader.cpp  HTTPReader.hpp  Socket.cpp  Socket.hpp
src/Logger/: CMakeLists.txt  Logger.hpp
src/Router/: CMakeLists.txt  Router.cpp  Router.hpp  Routes.cpp  Routes.hpp
tests/: main.cpp
